Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4049

Linux C++ broker crashes when Windows client connects SSL with expired certificate

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 0.17
    • 0.17
    • C++ Broker
    • Linux

    Description

      Testing Windows client -> Linux broker SSL connections. The SSL cert is expired and this results in the following on Linux:

      2012-06-08 17:08:12 error Error reading socket: Encountered end of file [-5938]
      2012-06-08 17:08:14 error Connection 192.168.10.4:5671-192.168.10.40:60748 No protocol received closing

      Program received signal SIGSEGV, Segmentation fault.
      [Switching to Thread 0x40a00940 (LWP 15265)]
      0x00002aaaac0d9164 in qpid::sys::ssl::ProtocolTimeoutTask::fire() ()
      from /qpidbuilds/trunk/qpid/cpp/rhel5/src/ssl.so
      (gdb) where
      #0 0x00002aaaac0d9164 in qpid::sys::ssl::ProtocolTimeoutTask::fire() ()
      from /qpidbuilds/trunk/qpid/cpp/rhel5/src/ssl.so
      #1 0x00002aaaab51c7bc in qpid::sys::TimerTask::fireTask() ()
      from /qpidbuilds/trunk/qpid/cpp/rhel5/src/libqpidcommon.so.2.0.0
      #2 0x00002aaaab51c952 in qpid::sys::Timer::fire(boost::intrusive_ptr<qpid::sys::TimerTask>) ()
      from /qpidbuilds/trunk/qpid/cpp/rhel5/src/libqpidcommon.so.2.0.0
      #3 0x00002aaaab51d22d in qpid::sys::Timer::run() ()
      from /qpidbuilds/trunk/qpid/cpp/rhel5/src/libqpidcommon.so.2.0.0
      #4 0x00002aaaab4a9e74 in qpid::sys::(anonymous namespace)::runRunnable(void*)
      () from /qpidbuilds/trunk/qpid/cpp/rhel5/src/libqpidcommon.so.2.0.0
      #5 0x000000318f60677d in start_thread () from /lib64/libpthread.so.0
      #6 0x000000318eed325d in clone () from /lib64/libc.so.6
      (gdb)

      On Windows, this error looks like:

      2012-06-08 17:07:06 notice SSL negotiation failed to smokey:5671: The received certificate has expired.
      2012-06-08 17:07:06 warning Connect failed: The received certificate has expired
      . (..\..\..\..\cpp\src\qpid\client\windows\SslConnector.cpp:111)
      2012-06-08 17:07:06 warning Connection [192.168.10.40:60748-smokey:5671] closed

      Connection [192.168.10.40:60748-smokey:5671] closed
      E:\

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            shuston Stephen D. Huston
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: