QPID-4049: Linux C++ broker crashes when client connects SSL with expired certificate

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1350406 13f79535-47bb-0310-9956-ffa450edef68